Switches to a simplified MMT webpack structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,36 @@
 node_modules
+build
+
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+*.tmp
+
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+*.log
+*.sql
+*.sqlite
+
 .DS_Store
-.sonarlint
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+*.idea
+*.vscode
+*.sonarlint
+/.happypack
