--- a/package.json
+++ b/package.json
@@ -1,37 +1,54 @@
 {
-  "name": "mmt-digital-fe-test",
-  "version": "1.0.0",
-  "description": "The technical test for Front End Developers at MMT Digital, comprising of two parts: a JavaScript-specific test, and a broader Front End test.",
+  "name": "fe-test",
+  "version": "0.0.1",
+  "description": "A base repository for front-end tests at MMT Digital",
   "main": "index.js",
-  "dependencies": {
-    "body-parser": "^1.17.2",
-    "express": "^4.15.3"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-jest": "^20.0.3",
-    "babel-preset-es2015": "^6.24.1",
-    "jest": "^20.0.4",
-    "nodemon": "^1.11.0"
-  },
   "scripts": {
-    "start": "nodemon src/server --exec babel-node --config config/nodemon.json",
-    "test": "test"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile": "node -r babel-register node_modules/.bin/webpack --config config/webpack/webpack.config.js --colors --progress --watch",
+    "serve": "cross-env nodemon build/index --config config/nodemon.json",
+    "start": "npm run compile && npm run serve"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@bitbucket.org/mmtdigital/fe-test.git"
+    "url": "git@bitbucket.org:mmtdigital/fe-test.git"
   },
-  "keywords": [
-    "front",
-    "end",
-    "javascript",
-    "scss",
-    "sass",
-    "css",
-    "html"
-  ],
-  "author": "Owen Ayres <owen.a@mmtdigital.co.uk>",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "homepage": "https://bitbucket.org/mmtdigital/fe-test#readme"
+  "homepage": "https://bitbucket.org/mmtdigital/fe-test",
+  "devDependencies": {
+    "autoprefixer": "^7.1.4",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-module-resolver": "^2.7.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators": "^6.24.1",
+    "babel-plugin-transform-do-expressions": "^6.22.0",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
+    "babel-plugin-transform-function-bind": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-react-constant-elements": "^6.23.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.8",
+    "babel-preset-env": "^1.6.0",
+    "babel-register": "^6.26.0",
+    "clean-webpack-plugin": "^0.1.16",
+    "cross-env": "^5.0.5",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
+    "html-loader": "^0.5.1",
+    "img-loader": "^2.0.0",
+    "node-sass": "^4.5.3",
+    "postcss-loader": "^2.0.6",
+    "postcss-scss": "^1.0.2",
+    "sass-loader": "^6.0.6",
+    "url-loader": "^0.6.1",
+    "webpack": "^3.6.0",
+    "webpack-manifest-plugin": "^1.3.2",
+    "webpack-merge": "^4.1.0",
+    "sass-resources-loader": "^1.3.1"
+  }
 }
