--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "node -r babel-register node_modules/.bin/webpack --config config/webpack/webpack.config.js --colors --progress --watch",
-    "serve": "cross-env nodemon build/index --config config/nodemon.json",
+    "serve": "http-server build",
     "start": "npm run compile && npm run serve"
   },
   "repository": {
@@ -35,6 +35,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-register": "^6.26.0",
     "clean-webpack-plugin": "^0.1.16",
+    "copy-webpack-plugin": "^4.2.0",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.0",
@@ -45,10 +46,14 @@
     "postcss-loader": "^2.0.6",
     "postcss-scss": "^1.0.2",
     "sass-loader": "^6.0.6",
+    "sass-resources-loader": "^1.3.1",
     "url-loader": "^0.6.1",
     "webpack": "^3.6.0",
     "webpack-manifest-plugin": "^1.3.2",
-    "webpack-merge": "^4.1.0",
-    "sass-resources-loader": "^1.3.1"
+    "webpack-merge": "^4.1.0"
+  },
+  "dependencies": {
+    "http-server": "^0.10.0",
+    "jquery": "^3.2.1"
   }
 }
