--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node -r babel-register node_modules/.bin/webpack-dev-server --config config/webpack/webpack.config.js"
+    "start": "node -r babel-register node_modules/.bin/webpack-dev-server --hot --inline --config config/webpack/webpack.config.js"
   },
   "repository": {
     "type": "git",
