--- a/package.json
+++ b/package.json
@@ -4,12 +4,8 @@
   "description": "A base repository for front-end tests at MMT Digital",
   "main": "index.js",
   "scripts": {
-<<<<<<< HEAD
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node -r babel-register node_modules/.bin/webpack-dev-server --hot --inline --config config/webpack/webpack.config.js"
-=======
-    "start": "node -r babel-register node_modules/webpack-dev-server/bin/webpack-dev-server.js  --config config/webpack/webpack.config.js"
->>>>>>> master
+    "start": "node -r babel-register node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --inline --config config/webpack/webpack.config.js"
   },
   "repository": {
     "type": "git",
