--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "copy-webpack-plugin": "^4.2.0",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
+    "enzyme": "^3.3.0",
+    "eslint": "^4.19.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "friendly-errors-webpack-plugin": "^1.6.1",
@@ -44,6 +46,7 @@
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
     "postcss-scss": "^1.0.2",
+    "react-test-renderer": "^16.2.0",
     "sass-loader": "^6.0.6",
     "sass-resources-loader": "^1.3.1",
     "url-loader": "^0.6.1",
@@ -53,6 +56,7 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
+    "express": "^4.16.3",
     "http-server": "^0.10.0",
     "jquery": "^3.2.1",
     "react": "^16.2.0",
